# Python-NLPTemplateEngine

./: README.md  pyproject.toml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/tracks/implement_core_nlp_template_engine_functionality_20260220/: index.md  metadata.json  plan.md  spec.md
docs/: NLPTemplateEngine-vignette.ipynb
src/NLPTemplateEngine/: __init__.py  core.py  ingestion.py
src/NLPTemplateEngine/resources/: __init__.py
